test/sema/example_9.colgm
func main() {
    var x = 1
    var a = if x == 1 {
        var b = 1
    } else {
        var b = x
    }
}